<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExemploPersistencia</string>
    <string name="action_settings">Settings</string>
    <string name="selecione">Selecione o tipo de percistencia:</string>
    <string name="label_preference">Preference</string>
    <string name="label_arquivo">Arquivo</string>
    <string name="label_sql">SQLite</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="entre_texto">Entre o Texto:</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_mostrar">Mostrar</string>
    <string name="valor_preference">valor</string>
    <string name="title_activity_arquivo">ArquivoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sqlite">SQLiteActivity</string>

</resources>